Dodane sumowanie tak zwanych oszczędzonych pieniędzy.
